<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_project_new"
        android:title="@string/project_new" />
    <item
        android:id="@+id/action_project_save"
        android:title="@string/project_save" />
    <item
        android:id="@+id/action_project_load"
        android:title="@string/project_load" />
    <item
        android:id="@+id/menu_marker_labels"
        android:title="@string/marker_labels">
        <menu>
            <group
                android:id="@+id/group_marker_labels"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_labels_auto"
                    android:title="@string/marker_labels_auto" />
                <item
                    android:id="@+id/action_labels_on"
                    android:title="@string/marker_labels_on" />
                <item
                    android:id="@+id/action_labels_off"
                    android:title="@string/marker_labels_off" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_remove_ads"
        android:title="@string/remove_ads" />
    <item
        android:id="@+id/action_restore_purchases"
        android:title="@string/restore_purchases" />
</menu>
